--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student name:"
+    "Student name: Mohammed Abdullah Al-Jaaidi"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student ID:"
+    "Student ID: 23326727"
    ]
   },
   {
@@ -69,7 +69,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may add as many cells as you require to complete this task. Refer to the Rubric for E-tivity 1 to see how you will be assessed."
+    "### Option 1: Symbolic calculation of the derivative\n",
+    "\n",
+    "#### Requirement 1:\n",
+    "Write a python function to symbolically calculate the derivative of a polynomial with one variable. The input should be a polynomial and the output should also be a polynomial.\n",
+    "\n",
+    "#### Overall suggested solution steps:\n",
+    "1- Accept the symbolic polynomial as a string argument to the function.\n",
+    "2- devide the polynomial to its individual terms and store the terms as items in a python list (We can split the terms using split method and  “+” or “-” signs as separators)\n",
+    "3- Loop through the list and calculate then save the derivative of each term in three steps:\n",
+    "    1- Split the term into coefficient and exponent parts.\n",
+    "    2- Apply the power rule to compute the derivative term.\n",
+    "    3- Append the derivative term to a python list.\n",
+    "4- Join the derivative terms to form the derivative polynomial.\n",
+    "5- Return the result.\n",
+    "\n",
+    "#### Initial solution code:"
    ]
   },
   {
@@ -77,7 +92,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def derivative_of_polynomial(polynomial):\n",
+    "    # Split the polynomial into its individual terms\n",
+    "    # TODO: add spliting on '-'\n",
+    "    terms = polynomial.split('+')\n",
+    "    # Initialize an empty list to store the derivative terms\n",
+    "    derivative_terms = []\n",
+    "    # Loop through each term and compute its derivative\n",
+    "    for term in terms:\n",
+    "        # Split the term into coefficient and exponent\n",
+    "        parts = term.split('x^')\n",
+    "        if len(parts) == 2:\n",
+    "            coefficient = int(parts[0]) if parts[0] else 1\n",
+    "            exponent = int(parts[1])\n",
+    "            # Apply the power rule to compute the derivative term\n",
+    "            derivative_coefficient = coefficient * exponent\n",
+    "            if exponent > 1:\n",
+    "                derivative_exponent = exponent - 1\n",
+    "                derivative_term = f\"{derivative_coefficient}x^{derivative_exponent}\"\n",
+    "            else:\n",
+    "                derivative_term = str(derivative_coefficient)\n",
+    "            derivative_terms.append(derivative_term)\n",
+    "    # Join the terms to form the derivative polynomial\n",
+    "    derivative_polynomial = '+'.join(derivative_terms)    \n",
+    "    return derivative_polynomial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Requirement 2:\n",
+    "Write a python function to evaluate (i.e. get the numerical value) of a polynomial for a given value of its variable. The input should be a polynomial and a value (point at which to evaluate the polynomial). The output should be a scalar.\n",
+    "\n",
+    "#### Overall suggested solution steps:\n",
+    "1- Accept the symbolic polynomial and the given value as a string argument to the function.\n",
+    "2- devide the polynomial to its individual terms and store the terms as items in a python list (We can split the terms using split method and  “+” or “-” signs as separators)\n",
+    "3- Loop through each term and evaluate it for the given value\n",
+    "\n",
+    "#### Initial solution code:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
