Replace CE4021-Etivity1.ipynb

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -166,12 +166,14 @@
     "if for the purpose of the task we just define the variable, I guess it's ok to calculate the way I did it but with user\n",
     "input we could use a for loop. I used a conditional statement inside and I feel it's useless but I wanted to show my \n",
     "understanding of the if/else statement. I can make more complex if else statements and loop through arrays and do calculations \n",
-    "with the elements[i] , well i guess basic calculations just like in the videos material incliding with the modulus operator to find \n",
+    "with the elements[i] , well i guess basic calculations just like in the videos material including with the modulus operator to find \n",
     "odd and even numbers too.\n",
     "\n",
     "I have not checked anyone's code and just came up with this but I will compare my approach to my peers \n",
-    "approaches after checking the posts. I have tried to run my code and it doesn't run due to indent issues and I will be\n",
-    "fixing it later.\n",
+    "approaches after checking the posts. I have tried to run my code on different online compilers and \n",
+    "it doesn't run due to indent issues/return error but the code looked correct . \n",
+    "I ran the code on https://pynative.com/online-python-code-editor-to-execute-python-code/ and it worked.\n",
+    "It seems that some online compilers/editors aren't working properly.\n",
     "\n"
    ]
   }
