fill out functionality of functions

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "#### Differentiation of a polynomial\n",
     "\n",
-    "What if I wanted to find the velocity of the ball ($ V_{y} $) at a time ($ t $)? Well the velocity can be calculated as the change in displacement ($ ds $) divided by the change in time ($ dt $) or $ \\frac{ds}{dt} $ \n",
+    "What if I wanted to find the velocity of the ball ($ V_{y} $) at a time ($ t $)? The velocity can be calculated as the change in displacement ($ ds $) divided by the change in time ($ dt $) or $ \\frac{ds}{dt} $ \n",
     "\n",
     "$$ \\frac{change~in~displacement}{change~in~time} = \\frac{ds}{dt} = velocity $$\n",
     "\n",
