fix second function to just solve polynomial

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -244,15 +244,12 @@
     "                        into the output polynomial.\n",
     "    \"\"\"\n",
     "\n",
-    "    # Apply polynomial_differentiation on the input polynomial\n",
-    "    differentiated_polynomial = polynomial_differentiation(input_polynomial)\n",
-    "\n",
     "    # var to hold the addition of each term of the differentiated polynomial to produce a scalar\n",
     "    scalar = 0\n",
     "    # check to see if input is a number\n",
     "    if isinstance(known_var, (int, float)):\n",
     "        # Use the input variable to calculate the term and add it to make up the scalar\n",
-    "        for coefficient, power in differentiated_polynomial:\n",
+    "        for coefficient, power in input_polynomial:\n",
     "            scalar += (known_var**power)*coefficient\n",
     "    # if not a number provide feedback and end it\n",
     "    else:\n",
