Replace CE4021-Etivity1.ipynb

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -89,6 +89,33 @@
     "#example 2 = 5x - 3x + 2\n",
     "#example 3 = 2x - x + 2 + 4x\n",
     "\n",
+    "\n",
+    "#the derivative of x is 1 \n",
+    "\n",
+    "#power rule:\n",
+    "# d/dx (x'1) = 1x'0 = 1\n",
+    "\n",
+    "#constant rule:\n",
+    "# the derivative of a constant = 0 \n",
+    "\n",
+    "#The derivatives of the above examples are :\n",
+    "#example 1 = 3\n",
+    "#example 2 = 5 - 3\n",
+    "#example 3 = 2 - 1 + 4\n",
+    "\n",
+    "#derivative calculation algorithm draft:\n",
+    "# x = 0 \n",
+    "#polynomial1 = [3, 0, 4, 5] \n",
+    "#def derivative(polynomial1):\n",
+    "#res=[]\n",
+    "#for i in range(len(polynomial1)):\n",
+    "#if (polynomial1[i] == 0):\n",
+    "#res.append(polynomial1[i-1])\n",
+    "#return res\n",
+    "#print(derivative(polynomial1))\n",
+    "\n",
+    "\n",
+    "\n",
     "polynomial1 = [3, 4, 5]\n",
     "polynomial2 = [5, 3, 2]\n",
     "polynomial3 = [2, 1, 2, 4]\n",
@@ -108,6 +135,45 @@
     "        return res\n",
     "\n",
     "print(derivative(polynomial1))\n",
+    "\n",
+    "\n",
+    "#second attempt to calculate the 3 examples in the same function.\n",
+    "\n",
+    "def derivative(polynomial1, polynomial2, polynomial3):\n",
+    "        res=[]\n",
+    "        if derivative(polynomial1):\n",
+    "           for i in range(1, len(polynomial1)):\n",
+    "            res.append(polynomial1[i] * i)\n",
+    "\n",
+    "        elif derivative(polynomial2):\n",
+    "             for i in range(1, len(polynomial2)):\n",
+    "              res.append(polynomial2[i] * i)\n",
+    "\n",
+    "        else derivative(polynomial3):\n",
+    "             for i in range(1, len(polynomial3)):\n",
+    "              res.append(polynomial3[i] * i)    \n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "print(derivative(polynomial1))\n",
+    "print(derivative(polynomial2))\n",
+    "print(derivative(polynomial3))\n",
+    "\n",
+    "\n",
+    "#third attempt at finding the derivative:\n",
+    "\n",
+    "polynomial1 = [3, 0, 4, 5] \n",
+    "\n",
+    "def derivative(polynomial1):\n",
+    "  res=[]\n",
+    "  for i in range(len(polynomial1)):\n",
+    "    if (polynomial1[i] == 0):\n",
+    "      res.append(polynomial1[i-1])\n",
+    "  return res\n",
+    "\n",
+    "print(derivative(polynomial1))\n",
+    "\n",
+    "\n",
     "\n",
     "#evaluate a polynomial with a given value for its variable (x in this case) \n",
     "\n",
@@ -161,6 +227,14 @@
     "passed the 3 examples variables such as def derivative(polynomial1, polynomial2, polynomial3): but then I would have to do 3 for loops \n",
     "and I think we can only return once a function. I guess I think I would need to create 3 separate functions to calculate the \n",
     "derivative of each example. \n",
+    "\n",
+    "Upon review , I thought about trying to calculate the 3 examples within the same function and came up with a second attempt \n",
+    "however the code is not working but I feel the algorithm is ok. \n",
+    "\n",
+    "I also looked at how to calculate the derivatives as my first code/attempt didn't seem to compute the correct calculation and wrote\n",
+    "about this as comments and then realised I could come up with an alogrithm for that using a for loop and and if statement.\n",
+    "The code works and it does calculate the correct answer. \n",
+    "\n",
     "\n",
     "For the evaluate function , I think it's simple but maybe I could have used a for loop . I think it depends \n",
     "if for the purpose of the task we just define the variable, I guess it's ok to calculate the way I did it but with user\n",
