add sentence on why I chose lists

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -299,6 +299,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "list/tuples were used because if the polynomial had more then 1 of the same power for a variable it would allow this. A dictionary or set would not allow this flexibility."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
