add list of possible tests

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +214,11 @@
     "    # for each term of the polynomial use the coefficient and the power of the variable\n",
     "    for coefficient, var_power in input_polynomial:\n",
     "        # Check to see if input is a polynomial\n",
-    "        if var_power<0:\n",
-    "            print(\"Input formula contains negative power for a variable. Input needs to be a polynomial.\")\n",
+    "        if var_power == None or var_power < 0:\n",
+    "            print(\"Input polynomial contains negative or type None power for a variable. Input needs to be a valid polynomial.\")\n",
+    "            return\n",
+    "        if coefficient == None:\n",
+    "            print(\"Input polynomial contains type None for a coefficient. Input needs to be a valid polynomial.\")\n",
     "            return\n",
     "        # if either the coefficient or the power are zero the term is zero so pass\n",
     "        if coefficient == 0 or var_power == 0:\n",
@@ -270,6 +273,39 @@
     "### Testing\n",
     "\n",
     "Test cases cover corner cases without redundancy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input polynomial contains negative or type None power for a variable. Input needs to be a valid polynomial.\n",
+      "Input polynomial contains type None for a coefficient. Input needs to be a valid polynomial.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Used this post in Q&A as inspiration: https://learn.ul.ie/d2l/le/10675/discussions/threads/7746/View\n",
+    "# Test 1: 0 Exponential\n",
+    "zero_exp_poly = [[2, 3], [5, 7], [4, 0]]\n",
+    "polynomial_differentiation(zero_exp_poly)\n",
+    "# Test 2: Extreme exponential (x^10000)\n",
+    "extreme_poly = [[1, 1], [8, 37], [6, 1000000]]\n",
+    "polynomial_differentiation(extreme_poly)\n",
+    "# Test 3: two elements with the same exponential\n",
+    "same_exp_poly = [[2, 3], [77, 3], [88, 88]]\n",
+    "polynomial_differentiation(same_exp_poly)\n",
+    "# Test 4: null value for exponential\n",
+    "null_poly_exp = [[9, None], [5, 9], [12, 6]]\n",
+    "polynomial_differentiation(null_poly_exp)\n",
+    "# Test 4: null value for coefficient\n",
+    "null_poly_coef = [[None, 9], [5, 9], [12, 6]]\n",
+    "polynomial_differentiation(null_poly_coef)"
    ]
   },
   {
