Improve understanding & explanation of derivatives

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
     "\n",
     "##### Equation for Vertical Motion\n",
     "\n",
-    "Polynomials are equations that can be used to describe linear processes is one that represents a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this example we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following equation is a polynomial that represents the vertical displacement ($ h $) as a function of time ($ t $) with respect to the initial velocity ($ V_{iy} $), and acceleration/deceleration due to gravity ($ g $).\n",
+    "Polynomials are equations that can be used to describe linear processes. One specific one can describe an object being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this example we will fire our ball from ground level within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The equation for vertical motion is a polynomial that represents the vertical displacement ($ h $) as a function of time ($ t $) with respect to the initial velocity ($ V_{iy} $), and acceleration/deceleration due to gravity ($ g $).\n",
     "\n",
     "\\begin{equation}\n",
     "    h(t) = V_{iy}t - \\frac{1}{2}gt^2\n",
@@ -96,55 +96,61 @@
     "\n",
     "#### Differentiation of a polynomial\n",
     "\n",
-    "TODO: Add in about slopes if there is enough time\n",
+    "What if I wanted to find the velocity of the object ($ V_{y} $) at a time ($ t $)? Velocity is the change is distance (measured in meters m) divided by a change in time (measured in seconds s), or $ \\frac{m}{s} $). Our equation above gets the displacement for a given time. If we were to get the velocity between two points in time we could get the displacement at one time $ t $ subtract it from the displacement at another time a little further on $ \\delta t $ and divide it by the difference between the two times:\n",
     "\n",
-    "What if I wanted to find the velocity of the ball ($ V_{y} $) at a time ($ t $)? The velocity can be calculated as the change in displacement ($ ds $) divided by the change in time ($ dt $) or $ \\frac{ds}{dt} $ \n",
+    "$$ Velocity~between~t~and~t+\\delta t = \\frac{change~in~distance}{change~in~time} = \\frac{h(t~+~\\delta~t) - h(t)}{(t~+~\\delta~t) - t}~~or~~\\frac{h(t~+~\\delta~t) - h(t)}{\\delta~t}  $$\n",
     "\n",
-    "$$ \\frac{change~in~displacement}{change~in~time} = \\frac{ds}{dt} = velocity $$\n",
+    "With the formula above we could get the velocity between any two points in time. When you think of velocity here it is the ratio (or slope tangent to the function when thinking it terms of points and lines on a graph) of $ h $ to $ t $ (or $ \\frac{h}{t} $). These two points on the graph of $ h(t) $ would be ($ t $, $ h(t) $) and ($ t~+~\\delta~t $, $ h(t~+~\\delta~t) $)\n",
     "\n",
-    "The derivative is defined as 'an instantaneous rate of change' which, as pointed out in the [video by 3Blue1Brown on the topic](https://youtu.be/9vKqVkMQHKk?si=QGEQitIiNg3zORRg&t=30s), is an oxymoron. \"Change is something that happens between separate points in time, and when you blind yourself to all but a single instant, there is no more room for change.\" For example if you wanted to get the velocity at 3 minutes (at an instant in time) and the velocity requires a change in time to calculate it then it really doesn't make sense at face value.\n",
+    "The derivative is defined as 'an instantaneous rate of change'. As pointed out in the [video by 3Blue1Brown on the topic](https://youtu.be/9vKqVkMQHKk?si=QGEQitIiNg3zORRg&t=30s), this is an oxymoron. \"Change is something that happens between separate points in time, and when you blind yourself to all but a single instant, there is no more room for change.\" For example if you wanted to get the velocity at 3 minutes (at an instant in time), and the velocity requires a measure of time to calculate it, then it really doesn't make sense at face value. This is saying that $ \\delta t $ would be zero so the equation above would some to zero.\n",
     "\n",
-    "$ dt $ is an increment of time that approaches zero ($ {dt \\to 0} $). To find the velocity at dt we get the distance at time $ t + dt $, subtract the distance at $ t $, and divide by the time $ dt $. \n",
+    "Lucky we had some really smart people, the cool cats that founded calculus, that came up with an inspired solution here. For our example this instantaneous rate of change would be an 'instantaneous velocity'. It is the velocity at a single point (which again doesn't quite make sense). But what if you were to think of this change to happen at a $ \\delta~t $ that approaches zero ($ \\delta~t to zero $). Not is zero but forever gets closer and closer to zero. \n",
+    "\n",
+    "$$ \\frac{instantaneous~'change'~in~displacement}{instantaneous~'change'~in~time} = \\lim_{\\delta t \\to 0} \\frac{\\delta h}{\\delta t} = instantaneous~velocity $$\n",
+    "\n",
+    "Using the formula from above and adding in our limit that $ \\delta~t to zero $ we get:\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac{dh}{dt} = \\frac{h(t + dt) - h(t)}{dt}\n",
+    "    \\frac{\\delta h}{\\delta t} = \\lim_{\\delta t \\to 0} \\frac{h(t + \\delta t) - h(t)}{\\delta t}\n",
     "    \\tag{2}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac{dh}{dt} = \\frac{(V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{dt}\n",
+    "    \\frac{\\delta h}{\\delta t} = \\lim_{\\delta t \\to 0} \\frac{(V_{iy}(t + \\delta t) - \\frac{1}{2}g(t + \\delta t)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{\\delta t}\n",
     "    \\tag{3}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac{dh}{dt} = \\frac{V_{iy}(t) + V_{iy}(dt) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(dt)^2 - g(t)(dt) - V_{iy}(t) + \\frac{1}{2}gt^2}{dt}\n",
+    "    \\frac{\\delta h}{\\delta t} = \\lim_{\\delta t \\to 0} \\frac{V_{iy}(t) + V_{iy}(\\delta t) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(\\delta t)^2 - g(t)(\\delta t) - V_{iy}(t) + \\frac{1}{2}gt^2}{\\delta t}\n",
     "    \\tag{4}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac{dh}{dt} = \\frac{(V_{iy}(dt) - \\frac{1}{2}g(dt)^2 - g(t)(dt)}{dt}\n",
+    "    \\frac{\\delta h}{\\delta t} = \\lim_{\\delta t \\to 0} \\frac{(V_{iy}(\\delta t) - \\frac{1}{2}g(\\delta t)^2 - g(t)(\\delta t)}{\\delta t}\n",
     "    \\tag{5}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac{dh}{dt} = V_{iy} - \\frac{1}{2}g(dt) - g(t)\n",
+    "    \\frac{\\delta h}{\\delta t} = \\lim_{\\delta t \\to 0} V_{iy} - \\frac{1}{2}g(\\delta t) - g(t)\n",
     "    \\tag{6}\n",
     "\\end{equation}\n",
     "\n",
     "\n",
-    "As $ {dt \\to 0} $ the middle term approaches zero.\n",
+    "As $ {\\delta t \\to 0} $ the middle term approaches zero. So this term is negligible. Note that this is why the differentiation is an approximation:\n",
     "\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac{dh}{dt} = V_{iy} - g(t)\n",
+    "    \\frac{\\delta h}{\\delta t} = V_{iy} - g(t)\n",
     "    \\tag{7}\n",
     "\\end{equation}\n",
     "\n",
     "With the above equation we can work out the 'instantaneous velocity'.\n",
     "\n",
+    "Getting this instantaneous rate of change can be found for any function that can be differentiated. It is a way of getting a new function to best approximate the slope of a tangent for any given point for your original function.\n",
+    "\n",
     "##### The Power Rule\n",
     "\n",
-    "There is a rule for this type of differentiation named the power rule. Taking the positive integer power of the variable, multiplying that by the whole term and then taking 1 from that power:\n",
+    "There is a rule for this type of differentiation, when dealing with a variable with a power, named the power rule. Taking the power of the variable, multiplying that by the whole term and then taking 1 from that power:\n",
     "\n",
     "\\begin{equation}\n",
     "    \\frac{d}{dx}(ax^n) = anx^{n-1}\n",
@@ -153,11 +159,11 @@
     "\n",
     "You will note that if applied to equation 1 it can produce equation 7 in two easy steps. Applying the power rule to differentiate each term of the equation for vertical motion:\n",
     "\n",
-    "$$ \\frac{dh}{dt} = (1)V_{iy}t^{1-1} - (2)\\frac{1}{2}gt^{2-1} $$\n",
+    "$$ \\frac{\\delta h}{\\delta t} = (1)V_{iy}t^{1-1} - (2)\\frac{1}{2}gt^{2-1} $$\n",
     "\n",
     "And simplifying we get equation 7 that calculates velocity:\n",
     "\n",
-    "$$ \\frac{dh}{dt} = V_{iy} - g(t) $$\n",
+    "$$ \\frac{\\delta h}{\\delta t} = V_{iy} - g(t) $$\n",
     "\n",
     "This rule is what is used to calculate the derivatives in the *polynomial_differentiation* method below."
    ]
@@ -173,20 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.45 µs ± 97.7 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.25 µs ± 74 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.54 µs ± 87.7 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.58 µs ± 53.1 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def polynomial_differentiation(input_polynomial, return_tup_of_tups=False):\n",
     "    \"\"\"\n",
@@ -256,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +319,7 @@
        "[[6, 2], [-35, 6]]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +359,7 @@
        "[[1, 0], [296, 36], [6000000, 999999]]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +399,7 @@
        "[[6, 2], [231, 2], [7744, 87]]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +514,7 @@
        "[[inf, 5], [4890, 814], [-3, 0]]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +553,7 @@
        "[[inf, inf], [60, 5], [180, 5]]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +592,7 @@
        "[[-inf, 5], [1035, 44], [-80, 1]]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,14 +622,14 @@
     "\n",
     "Differentiation:\n",
     "\n",
-    "$$ \\frac{dh}{dt} = 1(20)t^{1-1} - 2(4.9)t^{2-1} $$\n",
+    "$$ \\frac{\\delta h}{\\delta t} = 1(20)t^{1-1} - 2(4.9)t^{2-1} $$\n",
     "\n",
     "$$ \\frac{dy}{dx} = 20 - 9.81t $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +638,7 @@
        "[[20, 0], [-9.8, 1]]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,32 +691,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is for first\n",
-      "1.25 µs ± 115 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.42 µs ± 90.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.4 µs ± 73.7 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "This is for second\n",
-      "1.87 µs ± 70.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.99 µs ± 635 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.85 µs ± 385 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "This is for third\n",
-      "2.36 µs ± 313 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "2.18 µs ± 104 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "1.93 µs ± 101 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "This is for fourth\n",
-      "2.73 µs ± 395 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "2.6 µs ± 125 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "2.18 µs ± 301 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dict_polynomial_differentiation(input_polynomial):\n",
     "\n",
@@ -780,11 +752,6 @@
     "# %timeit polynomial_differentiation(y4)\n",
     "# %timeit dict_polynomial_differentiation(dict4)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
