able to handle one element in the list

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,8 +202,15 @@
     "    # Empty list that will contain the output polynomial\n",
     "    output_polynomial = []\n",
     "\n",
-    "    # for each term of the polynomial use the coefficient and the power of the variable\n",
-    "    for coefficient, var_power in input_polynomial:\n",
+    "    # for each term of the polynomial\n",
+    "    for term in input_polynomial:\n",
+    "        # if only one element in the list representing a term treat as a constant\n",
+    "        if len(term) == 1:\n",
+    "            coefficient = term[0]\n",
+    "            var_power = 0\n",
+    "        # else grab the coefficient and the power for the term\n",
+    "        else:\n",
+    "            coefficient, var_power = term\n",
     "        # Check to see if input is a valid polynomial\n",
     "        if var_power == None or var_power < 0:\n",
     "            print(\"Input polynomial contains negative or type None power for a variable. Input needs to be a valid polynomial.\")\n",
@@ -251,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +326,7 @@
        "[[6, 2], [-35, 6]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +366,7 @@
        "[[1, 0], [296, 36], [6000000, 999999]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +406,7 @@
        "[[6, 2], [231, 2], [7744, 87]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +521,7 @@
        "[[inf, 5], [4890, 814], [-3, 0]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +560,7 @@
        "[[inf, inf], [60, 5], [180, 5]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +599,7 @@
        "[[-inf, 5], [1035, 44], [-80, 1]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +645,7 @@
        "[[20, 0], [-9.8, 1]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
