--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -693,6 +693,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# References\n",
+    "\n",
+    "- Murphy, O. (1986). Fundamental Applied Mathematics.\n",
+    "- 3 Blue 1 Brown on www.youtube.com. The paradox of the derivative | Chapter 2, Essence of calculus. [online](https://www.youtube.com/watch?v=9vKqVkMQHKk&list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x&index=2)\n",
+    "- 3 Blue 1 Brown on www.youtube.com. Derivative formulas through geometry | Chapter 3, Essence of calculus. [online](https://www.youtube.com/watch?v=S0_qX4VJhMQ&list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x&index=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Appendix"
    ]
   },
